--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,9 @@ h1 {
   font-size: 6rem;
 }
 
+
+
+
 .app {
   width: 100%;
   height: 100vh;
@@ -106,3 +109,23 @@ h1 {
 
 
 
+
+
+
+
+
+.search button {
+  padding: 10px;
+  font-size: 16px;
+  margin-left: 10px;
+  border: none;
+  background-color: #007BFF;
+  color: white;
+  border-radius: 4px;
+  cursor: pointer;
+  border-radius: 10px;
+}
+
+.search button:hover {
+  background-color: #0056b3;
+}
